--- a/labs/lab01/lab1.ipynb
+++ b/labs/lab01/lab1.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/MasterPieceRM/GoogleColab/blob/main/labs/lab01/lab1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "L0vswS1lPBQw",
       "metadata": {
         "id": "L0vswS1lPBQw"
@@ -501,9 +491,9 @@
         "C3 = \"WW91IGRvbid0IG5lZWQgYSBrZXkgdG8gZW5jb2RlIGRhdGEu\"\n",
         "\n",
         "# TODO: Decode the strings\n",
-        "P1 = ...\n",
-        "P2 = ...\n",
-        "P3 = ...\n",
+        "P1 = bin_2_str(C1)\n",
+        "P2 = hex_2_str(C2)\n",
+        "P3 = b64decode(C3)\n",
         "\n",
         "print(\"P1 = \", P1)\n",
         "print(\"P2 = \", P2)\n",
@@ -539,8 +529,8 @@
         "key = \"abcdefghijkl\"\n",
         "\n",
         "# TODO: Compute P1 and P2, from C1 and C2 respectively, using the key \"abcdefghijkl\"\n",
-        "P1 = ...\n",
-        "P2 = ...\n",
+        "P1 = bin_2_str(bitxor(C1, str_2_bin(key)))\n",
+        "P2 = hex_2_str(hexxor(C2, str_2_hex(key)))\n",
         "\n",
         "print(\"P1 = \", P1)\n",
         "print(\"P2 = \", P2)"
@@ -635,8 +625,93 @@
       },
       "outputs": [],
       "source": [
-        "# TODO: Print the output of each command, on different cells\n"
+        "# TODO: Print the output of each command, on different cells\n",
+        "print(ALPHABET)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(ALPHABET)"
+      ],
+      "metadata": {
+        "id": "9aQnGIlHRBJx"
+      },
+      "id": "9aQnGIlHRBJx",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ALPHABET[0]"
+      ],
+      "metadata": {
+        "id": "nlHKcs1ZRDKR"
+      },
+      "id": "nlHKcs1ZRDKR",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ord(\"A\")"
+      ],
+      "metadata": {
+        "id": "jHKz4YzyRFdT"
+      },
+      "id": "jHKz4YzyRFdT",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ord(\"D\") - ord(\"A\")"
+      ],
+      "metadata": {
+        "id": "UqtN5XrIRJVQ"
+      },
+      "id": "UqtN5XrIRJVQ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "26 % 26"
+      ],
+      "metadata": {
+        "id": "grIAIsPLRP1R"
+      },
+      "id": "grIAIsPLRP1R",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "28 % 26"
+      ],
+      "metadata": {
+        "id": "qXNXVRZjRQna"
+      },
+      "id": "qXNXVRZjRQna",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "-1 % 26"
+      ],
+      "metadata": {
+        "id": "uHwRqNhORQ0n"
+      },
+      "id": "uHwRqNhORQ0n",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -663,8 +738,33 @@
       },
       "outputs": [],
       "source": [
-        "# TODO: Print the output of each command, on different cells\n"
+        "# TODO: Print the output of each command, on different cells\n",
+        "caesar_enc(\"D\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "caesar_enc(\"Z\")"
+      ],
+      "metadata": {
+        "id": "tmV1EQJcRYTp"
+      },
+      "id": "tmV1EQJcRYTp",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "caesar_enc(\"B\")"
+      ],
+      "metadata": {
+        "id": "Weux0lbYRZ3t"
+      },
+      "id": "Weux0lbYRZ3t",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -699,7 +799,11 @@
       },
       "outputs": [],
       "source": [
-        "# TODO: Implement `caesar_dec(letter: str) -> str`\n"
+        "# TODO: Implement `caesar_dec(letter: str) -> str`\n",
+        "def caesar_dec(letter: str) -> str:\n",
+        "    if not \"A\" <= letter <= \"Z\":\n",
+        "        raise ValueError(\"Invalid letter\")\n",
+        "    return ALPHABET[(ord(letter) - ord(\"A\") - 3) % len(ALPHABET)]"
       ]
     },
     {
@@ -721,7 +825,8 @@
       },
       "outputs": [],
       "source": [
-        "# TODO: Test your implementation here\n"
+        "# TODO: Test your implementation here\n",
+        "caesar_dec('C')"
       ]
     },
     {
@@ -911,7 +1016,12 @@
       },
       "outputs": [],
       "source": [
-        "# TODO: Implement `caesar_dec_string(ciphertext: str) -> str`\n"
+        "# TODO: Implement `caesar_dec_string(ciphertext: str) -> str`\n",
+        "def caesar_dec_string(ciphertext: str) -> str:\n",
+        "    plaintext = \"\"\n",
+        "    for letter in ciphertext:\n",
+        "        plaintext += caesar_dec(letter)\n",
+        "    return plaintext"
       ]
     },
     {
@@ -933,7 +1043,8 @@
       },
       "outputs": [],
       "source": [
-        "# TODO: Test your implementation here\n"
+        "# TODO: Test your implementation here\n",
+        "caesar_dec_string(\"ELQHDWLYHQLW\")"
       ]
     },
     {
@@ -1005,8 +1116,33 @@
       },
       "outputs": [],
       "source": [
-        "# TODO: Print the output of each command, on different cells\n"
+        "# TODO: Print the output of each command, on different cells\n",
+        "caesar_enc_string(\"HELLO\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "caesar_enc_string(\"HELLO\", 0)"
+      ],
+      "metadata": {
+        "id": "KuT0yomMUTDg"
+      },
+      "id": "KuT0yomMUTDg",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "caesar_enc_string(\"HELLO\", k=1)"
+      ],
+      "metadata": {
+        "id": "GvMnaXYeUTT9"
+      },
+      "id": "GvMnaXYeUTT9",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1031,7 +1167,18 @@
       },
       "outputs": [],
       "source": [
-        "# TODO: Implement `caesar_dec_string(ciphertext: str, k: int = 3) -> str` that allows any arbitrary key\n"
+        "# TODO: Implement `caesar_dec_string(ciphertext: str, k: int = 3) -> str` that allows any arbitrary key\n",
+        "\n",
+        "def caesar_dec(letter: str, k: int = 3) -> str:\n",
+        "    if not \"A\" <= letter <= \"Z\":\n",
+        "        raise ValueError(\"Invalid letter\")\n",
+        "    return ALPHABET[(ord(letter) - ord(\"A\") - k) % len(ALPHABET)]\n",
+        "\n",
+        "def caesar_dec_string(ciphertext: str, k: int = 3) -> str:\n",
+        "    plaintext = \"\"\n",
+        "    for letter in ciphertext:\n",
+        "        plaintext += caesar_dec(letter, k)\n",
+        "    return plaintext"
       ]
     },
     {
@@ -1053,8 +1200,21 @@
       },
       "outputs": [],
       "source": [
-        "# TODO: Test your implementation here\n"
+        "# TODO: Test your implementation here\n",
+        "caesar_dec_string(\"KHOOR\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "caesar_dec_string(\"IFMMP\", 1)"
+      ],
+      "metadata": {
+        "id": "QJaBPreuVXfe"
+      },
+      "id": "QJaBPreuVXfe",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1186,8 +1346,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "interpreter": {
       "hash": "333b50860ab9178f76e69caacf27dc300f5f052c65712bf7933a7fbb4a05268d"
